updated project files and migrated to scala version 2.11.2