@@ -1,21 +1,7 @@
 name := "sidup"
 
-organization := Common.organization
-
-version := Common.version
-
-scalaVersion := Common.scalaVersion
-
-scalacOptions ++= Common.scalacOptions
-
-javaOptions ++= Common.javaOptions
-
-libraryDependencies ++= Common.libraryDependencies
-
-initialCommands in console := Common.initialCommands
-
 lazy val root = project.in(file(".")).aggregate(
-	core, ui, log2dot, profit, whiteboard, philosophers)
+	core, ui, log2dot, profit, whiteboard)
 
 lazy val core = project in file("Core")
 
@@ -27,4 +13,46 @@ lazy val profit = project.in(file("CaseStudies/ProfitReact")).dependsOn(ui)
 
 lazy val whiteboard = project.in(file("CaseStudies/SharedReactiveWhiteboard")).dependsOn(ui)
 
-lazy val philosophers = project.in(file("CaseStudies/Philosophers")).dependsOn(core)
+scalaVersion in ThisBuild := "2.11.2"
+
+version in ThisBuild := "0.1.1-STM"
+
+organization in ThisBuild := "de.tuda.stg"
+
+scalacOptions in ThisBuild ++= (
+    "-deprecation" ::
+    "-encoding" :: "UTF-8" ::
+    "-unchecked" ::
+    "-feature" ::
+    "-target:jvm-1.7" ::
+    //"-language:implicitConversions" ::
+    //"-language:reflectiveCalls" ::
+    "-Xlint" ::
+    "-Xfuture" ::
+    //"-Xlog-implicits" ::
+    Nil)
+
+libraryDependencies in ThisBuild ++= (
+    "com.typesafe.scala-logging" %% "scala-logging" % "3.0.0" ::
+    "org.slf4j" % "slf4j-simple" % "1.7.5" % "test" ::
+    "org.scalatest" %% "scalatest" % "2.1.7" % "test" ::
+    "org.scala-stm" %% "scala-stm" % "0.7" ::
+    Nil)
+
+javaOptions in ThisBuild ++= (
+  "-server" ::
+    //"-verbose:gc" ::
+    //"-Xms512M" ::
+    //"-Xmx512M" ::
+    //"-XX:NewRatio=1" ::
+    //"-XX:CompileThreshold=100" ::
+    //"-XX:+PrintCompilation" ::
+    //"-XX:+PrintGCDetails" ::
+    //"-XX:+UseParallelGC" ::
+    Nil)
+
+initialCommands in ThisBuild := """
+import reactive._
+import reactive.signals._
+import reactive.events._
+"""
